[gd_scene load_steps=9 format=3 uid="uid://cod3ihliaeqta"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_v2nny"]
[ext_resource type="Texture2D" uid="uid://ulhifjt1ec56" path="res://Players.png" id="2_en048"]
[ext_resource type="Texture2D" uid="uid://dk2c5y6o58o4l" path="res://Tools.png" id="3_ug02v"]
[ext_resource type="AudioStream" uid="uid://cteucpe4cfwvs" path="res://audio/ct_prc_essy.wav" id="4_vo0ik"]

[sub_resource type="CircleShape2D" id="CircleShape2D_id7w2"]
radius = 3.16228

[sub_resource type="Animation" id="Animation_0y3pf"]
resource_name = "Move"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.424115, -0.25, 0, 0.25, 0, 0.439823, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.7, 1)
}

[sub_resource type="Animation" id="Animation_aropq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fqh4"]
_data = {
"Move": SubResource("Animation_0y3pf"),
"RESET": SubResource("Animation_aropq")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_v2nny")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("2_en048")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_id7w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fqh4")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -11)
texture = ExtResource("3_ug02v")
hframes = 3

[node name="ToolTimer" type="Timer" parent="."]
one_shot = true

[node name="CastingFish" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vo0ik")

[connection signal="timeout" from="ToolTimer" to="." method="select_tool_continue"]
